[gd_scene load_steps=76 format=3 uid="uid://c4j4kyt7a5n01"]

[ext_resource type="Script" path="res://assets/scripts/playerScripts/golem_player.gd" id="1_gvf5v"]
[ext_resource type="Texture2D" uid="uid://bn7cyooo7fa42" path="res://assets/sprites/enemySprites/Mecha-stone Golem 0.1/PNG sheet/Character_sheet.png" id="1_m3def"]
[ext_resource type="PackedScene" uid="uid://8nw6luhhkyku" path="res://assets/scenes/areaFunctions/hurtbox.tscn" id="2_ui8pa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4u2nj"]
atlas = ExtResource("1_m3def")
region = Rect2(0, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_71rb5"]
atlas = ExtResource("1_m3def")
region = Rect2(100, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xaft"]
atlas = ExtResource("1_m3def")
region = Rect2(200, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_udnv5"]
atlas = ExtResource("1_m3def")
region = Rect2(300, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8bfa"]
atlas = ExtResource("1_m3def")
region = Rect2(400, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0tho"]
atlas = ExtResource("1_m3def")
region = Rect2(500, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqan7"]
atlas = ExtResource("1_m3def")
region = Rect2(600, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cr6f7"]
atlas = ExtResource("1_m3def")
region = Rect2(700, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfn5x"]
atlas = ExtResource("1_m3def")
region = Rect2(800, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e4gj"]
atlas = ExtResource("1_m3def")
region = Rect2(900, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_du7tw"]
atlas = ExtResource("1_m3def")
region = Rect2(0, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e8jc"]
atlas = ExtResource("1_m3def")
region = Rect2(100, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnumf"]
atlas = ExtResource("1_m3def")
region = Rect2(200, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_itlud"]
atlas = ExtResource("1_m3def")
region = Rect2(300, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_icrwd"]
atlas = ExtResource("1_m3def")
region = Rect2(400, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tamvq"]
atlas = ExtResource("1_m3def")
region = Rect2(500, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cx3x7"]
atlas = ExtResource("1_m3def")
region = Rect2(600, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cntm"]
atlas = ExtResource("1_m3def")
region = Rect2(700, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph5m7"]
atlas = ExtResource("1_m3def")
region = Rect2(0, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eldn7"]
atlas = ExtResource("1_m3def")
region = Rect2(100, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_o43cc"]
atlas = ExtResource("1_m3def")
region = Rect2(200, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssshd"]
atlas = ExtResource("1_m3def")
region = Rect2(300, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx04q"]
atlas = ExtResource("1_m3def")
region = Rect2(400, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8407w"]
atlas = ExtResource("1_m3def")
region = Rect2(500, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vg2k"]
atlas = ExtResource("1_m3def")
region = Rect2(600, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_605gv"]
atlas = ExtResource("1_m3def")
region = Rect2(700, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4sjy"]
atlas = ExtResource("1_m3def")
region = Rect2(800, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhc06"]
atlas = ExtResource("1_m3def")
region = Rect2(900, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_55h4n"]
atlas = ExtResource("1_m3def")
region = Rect2(0, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ax2a"]
atlas = ExtResource("1_m3def")
region = Rect2(100, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7ihm"]
atlas = ExtResource("1_m3def")
region = Rect2(200, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_of64b"]
atlas = ExtResource("1_m3def")
region = Rect2(300, 800, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyxwg"]
atlas = ExtResource("1_m3def")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqntf"]
atlas = ExtResource("1_m3def")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7m5m"]
atlas = ExtResource("1_m3def")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tng8v"]
atlas = ExtResource("1_m3def")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqlw0"]
atlas = ExtResource("1_m3def")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_41flp"]
atlas = ExtResource("1_m3def")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhj7x"]
atlas = ExtResource("1_m3def")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rt8q"]
atlas = ExtResource("1_m3def")
region = Rect2(700, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcm4w"]
atlas = ExtResource("1_m3def")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_keadr"]
atlas = ExtResource("1_m3def")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_glxf6"]
atlas = ExtResource("1_m3def")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_433w3"]
atlas = ExtResource("1_m3def")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_smv5k"]
atlas = ExtResource("1_m3def")
region = Rect2(0, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v3ji"]
atlas = ExtResource("1_m3def")
region = Rect2(100, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rucyo"]
atlas = ExtResource("1_m3def")
region = Rect2(200, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmnp5"]
atlas = ExtResource("1_m3def")
region = Rect2(300, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbj2i"]
atlas = ExtResource("1_m3def")
region = Rect2(400, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_upywk"]
atlas = ExtResource("1_m3def")
region = Rect2(500, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_koklh"]
atlas = ExtResource("1_m3def")
region = Rect2(600, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmq4w"]
atlas = ExtResource("1_m3def")
region = Rect2(0, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pshay"]
atlas = ExtResource("1_m3def")
region = Rect2(100, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpxty"]
atlas = ExtResource("1_m3def")
region = Rect2(200, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqvbi"]
atlas = ExtResource("1_m3def")
region = Rect2(300, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uphaj"]
atlas = ExtResource("1_m3def")
region = Rect2(400, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_orkgm"]
atlas = ExtResource("1_m3def")
region = Rect2(500, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgle4"]
atlas = ExtResource("1_m3def")
region = Rect2(600, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1q08"]
atlas = ExtResource("1_m3def")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mohgg"]
atlas = ExtResource("1_m3def")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gm8k7"]
atlas = ExtResource("1_m3def")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u85p7"]
atlas = ExtResource("1_m3def")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pymf"]
atlas = ExtResource("1_m3def")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyjn5"]
atlas = ExtResource("1_m3def")
region = Rect2(500, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_givn6"]
atlas = ExtResource("1_m3def")
region = Rect2(600, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_12pvg"]
atlas = ExtResource("1_m3def")
region = Rect2(700, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxh2d"]
atlas = ExtResource("1_m3def")
region = Rect2(800, 200, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_ga28j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u2nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_71rb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xaft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udnv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8bfa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0tho")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqan7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cr6f7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfn5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e4gj")
}],
"loop": false,
"name": &"armorBuff",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_du7tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e8jc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnumf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itlud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icrwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tamvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cx3x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cntm")
}],
"loop": false,
"name": &"block",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph5m7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eldn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o43cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssshd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx04q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8407w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vg2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_605gv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4sjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhc06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55h4n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ax2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7ihm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_of64b")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyxwg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqntf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7m5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tng8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqlw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41flp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhj7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rt8q")
}],
"loop": false,
"name": &"glowing",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcm4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_keadr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glxf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_433w3")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_smv5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v3ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rucyo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmnp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbj2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upywk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_koklh")
}],
"loop": false,
"name": &"lazarCast",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmq4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pshay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpxty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqvbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uphaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_orkgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgle4")
}],
"loop": false,
"name": &"meleeAttack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1q08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mohgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gm8k7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u85p7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pymf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyjn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_givn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12pvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxh2d")
}],
"loop": false,
"name": &"rangedAttack",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bk4rh"]
size = Vector2(24, 20)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ngvh7"]
radius = 7.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bde6o"]
radius = 7.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_84guc"]
radius = 12.0
height = 26.0

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_mask = 66308
script = ExtResource("1_gvf5v")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.22, 2.22)

[node name="bossTexure" type="AnimatedSprite2D" parent="."]
position = Vector2(5.96046e-08, -8)
scale = Vector2(0.42, 0.42)
sprite_frames = SubResource("SpriteFrames_ga28j")
animation = &"rangedAttack"
autoplay = "idle"

[node name="muzzle" type="Node2D" parent="bossTexure"]
position = Vector2(29, -9)

[node name="enemyInMelee" type="Area2D" parent="bossTexure"]
position = Vector2(-1.41916e-07, 19.0476)
scale = Vector2(2.38095, 2.38095)
collision_layer = 0
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="bossTexure/enemyInMelee"]
position = Vector2(14, -10)
shape = SubResource("RectangleShape2D_bk4rh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_ngvh7")

[node name="hurtbox" parent="." instance=ExtResource("2_ui8pa")]
collision_mask = 20

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_bde6o")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -10)
shape = SubResource("CapsuleShape2D_84guc")

[connection signal="animation_finished" from="bossTexure" to="." method="_on_boss_texure_animation_finished"]
[connection signal="body_entered" from="bossTexure/enemyInMelee" to="." method="_on_enemy_in_melee_body_entered"]
[connection signal="body_exited" from="bossTexure/enemyInMelee" to="." method="_on_enemy_in_melee_body_exited"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]

[editable path="hurtbox"]
